Prevent overlapping of the buttons for certain devices.

--- a/System_Files/css/night.css
+++ b/System_Files/css/night.css
@@ -20,6 +20,7 @@ h1 {
   text-decoration: none;
   color: white;
   transition-duration: 0.2s;
+  display: inline-block;
 }
 
 
